[package]
name = "prusia-vault"
version = "0.1.0"
edition = "2021"
authors = ["MethodWhite <methodwhite@proton.me>"]
description = "Unified secure vault for MethodWhite ecosystem with simple and PQC backends"
license = "MIT"
repository = "https://github.com/MethodWhite/prusia-vault"

[features]
default = ["simple"]
simple = ["serde", "serde_json", "sha2", "dirs"]
pqc = ["simple", "aes-gcm", "pqcrypto-traits", "pqcrypto-kyber", "pqcrypto-dilithium", "getrandom", "rand", "hex", "base64", "chrono", "sha2"]
tpm = []  # Future TPM support

[dependencies]
# Core dependencies (always available)
anyhow = "1.0"
thiserror = "2.0"

# Simple backend dependencies (default feature)
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
sha2 = { version = "0.10", optional = true }
dirs = { version = "5.0", optional = true }
colored = { version = "2.1", optional = true }

# PQC backend dependencies (optional)
aes-gcm = { version = "0.10", optional = true }
pqcrypto-traits = { version = "0.3.5", optional = true }
pqcrypto-kyber = { version = "0.8.1", optional = true }
pqcrypto-dilithium = { version = "0.5.0", optional = true }
getrandom = { version = "0.2", optional = true }
base64 = { version = "0.22", optional = true }
rand = { version = "0.8", optional = true }
hex = { version = "0.4", optional = true }


# For session management
chrono = { version = "0.4", features = ["serde"], optional = true }

[dev-dependencies]
tempfile = "3.10"
tokio = { version = "1.40", features = ["full"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]